--- a/buildSrc/src/main/groovy/docker-liferay-bundle.gradle
+++ b/buildSrc/src/main/groovy/docker-liferay-bundle.gradle
@@ -232,8 +232,11 @@ tasks.register("listAdminUsers") {
 		else {
 			println "Detected the following users explicitly granted the Administrator role"
 
+			String screenNameKey = maybeConvertDatabaseTableNameToUpperCase("screenName")
+			String emailAddressKey = maybeConvertDatabaseTableNameToUpperCase("emailAddress")
+
 			results.each {
-				println " - ${it["screenName"]} (${it["emailAddress"]})"
+				println " - ${it[screenNameKey]} (${it[emailAddressKey]})"
 			}
 		}
 	}
