--- a/buildSrc/src/main/groovy/docker-common.gradle
+++ b/buildSrc/src/main/groovy/docker-common.gradle
@@ -48,7 +48,7 @@ ext {
 		}
 
 		if (config.useDatabaseDB2) {
-			List<String> results = waitForCommand("${getDatabaseAccessCommand(schema)} ${sql}\\\"\"").split("\n").minus("")
+			List<String> results = waitForCommand("${getDatabaseAccessCommand(schema)} \"${sql}\"").split("\n").minus("")
 
 			results.removeLast()
 
@@ -98,7 +98,10 @@ ext {
 				schema = config.databaseName
 			}
 
-			return "docker compose exec --user db2admin database bash -c \"/opt/ibm/db2/V11.5/bin/db2 connect to ${schema} > /dev/null; /opt/ibm/db2/V11.5/bin/db2 \\\""
+			return [
+				"docker compose exec --user db2admin -it database /opt/ibm/db2/V11.5/bin/db2 connect to ${schema} > /dev/null",
+				"docker compose exec --user db2admin -it database /opt/ibm/db2/V11.5/bin/db2"
+			].join("\n")
 		}
 	}
 
