--- a/buildSrc/src/main/groovy/docker-liferay-bundle.gradle
+++ b/buildSrc/src/main/groovy/docker-liferay-bundle.gradle
@@ -232,8 +232,8 @@ tasks.register("listAdminUsers") {
 		else {
 			println "Detected the following users explicitly granted the Administrator role"
 
-			String emailAddressKey = maybeConvertDatabaseTableNameToUpperCase("emailAddress")
-			String screenNameKey = maybeConvertDatabaseTableNameToUpperCase("screenName")
+			String emailAddressKey = toTableName("emailAddress")
+			String screenNameKey = toTableName("screenName")
 
 			results.each {
 				println " - ${it[screenNameKey]} (${it[emailAddressKey]})"
