--- a/buildSrc/src/main/groovy/docker-liferay-bundle.gradle
+++ b/buildSrc/src/main/groovy/docker-liferay-bundle.gradle
@@ -10,6 +10,14 @@ import java.nio.file.Paths
 
 project.plugins.apply "docker-common"
 
+configurations {
+	db2
+}
+
+dependencies {
+	db2 group: "com.ibm.db2.jcc", name: "db2jcc", version: "db2jcc4"
+}
+
 Closure<Boolean> isValidLicenseFile = {
 	File licenseFile ->
 
@@ -106,7 +114,7 @@ tasks.register("checkForLiferayLicense") {
 	}
 }
 
-tasks.register("prepareDB2JDBCDriver", Download) {
+tasks.register("prepareDB2JDBCDriver", Copy) {
 	onlyIf("using the Liferay service") {
 		config.useLiferay
 	}
@@ -114,11 +122,8 @@ tasks.register("prepareDB2JDBCDriver", Download) {
 		config.useDatabaseDB2
 	}
 
-	dest project.layout.dir(project.provider{ project.file("configs/common/tomcat/webapps/ROOT/WEB-INF/shielded-container-lib")})
-
-	overwrite false
-
-	src "https://repo1.maven.org/maven2/com/ibm/db2/jcc/db2jcc/db2jcc4/db2jcc-db2jcc4.jar"
+	from configurations.db2
+	into "configs/common/tomcat/webapps/ROOT/WEB-INF/shielded-container-lib"
 }
 
 tasks.register("validateHotfixURLs") {
