LPD-56141 fixes typo

--- a/gradle.properties
+++ b/gradle.properties
@@ -103,7 +103,7 @@ lr.docker.environment.glowroot.enabled=false
 # Set to 'true' or '1' to enable the YourKit integration.
 lr.docker.environment.yourkit.enabled=false
 
-# Optionel
+# Optional
 #
 # The download URL of the YourKit agent.
 lr.docker.environment.yourkit.url=https://www.yourkit.com/download/docker/YourKit-JavaProfiler-2025.3-docker.zip
