LPD-58245 Allow JVM arguments to be set for tomcat, and raise the default heap size to help with any performance issues

--- a/compose-recipes/liferay/service.liferay.yaml
+++ b/compose-recipes/liferay/service.liferay.yaml
@@ -5,6 +5,8 @@ services:
             -   GLOWROOT_ENABLED=${GLOWROOT_ENABLED}
             -   LIFERAY_JPDA_ENABLED=true
             -   LIFERAY_DISABLE_TRIAL_LICENSE=true
+        env_file:
+            -   ./liferay-jvm-opts.env
         healthcheck:
             interval: 5s
             start_period: 5m
