LPD-58245 Intialize environment variable to prevent warning from appearing

--- a/liferay-jvm-opts.env
+++ b/liferay-jvm-opts.env
@@ -1,3 +1,6 @@
+# Initialize variable, do not change
+LIFERAY_JVM_OPTS=""
+
 # Set Java initial heap space size
 LIFERAY_JVM_OPTS="${LIFERAY_JVM_OPTS} -Xms4096m"
 
