LPD-62327 Use mounted dumps directory to fetch backups

--- a/compose-recipes/db2/service.db2.yaml
+++ b/compose-recipes/db2/service.db2.yaml
@@ -18,7 +18,7 @@ services:
         volumes:
             -   read_only: true
                 source: data-volume
-                target: /var/custom
+                target: /database/data/db2admin/NODE0000/backups
                 type: volume
                 volume:
                     subpath: dumps
