--- a/compose-recipes/db2/service.db2.yaml
+++ b/compose-recipes/db2/service.db2.yaml
@@ -3,7 +3,7 @@ services:
         build: ./compose-recipes/db2
         container_name: ${NAMESPACE}-database-db2
         environment:
-            -   COMPOSER_DATABASE_NAME=lportal
+            -   COMPOSER_DATABASE_NAME=${DATABASE_NAME}
             -   DB2INSTANCE=db2admin
             -   DB2INST1_PASSWORD=lportal
             -   LICENSE=accept
