LPD-62773 Allow users to select mariadb

--- a/gradle.properties
+++ b/gradle.properties
@@ -42,6 +42,7 @@ lr.docker.environment.compose.files=
 lr.docker.environment.service.enabled[db2]=false
 lr.docker.environment.service.enabled[elasticsearch]=false
 lr.docker.environment.service.enabled[liferay]=true
+lr.docker.environment.service.enabled[mariadb]=false
 lr.docker.environment.service.enabled[mysql]=false
 lr.docker.environment.service.enabled[postgres]=false
 lr.docker.environment.service.enabled[webserver_http]=false
