adds a local bind mount for convenient access to logs and reports
The intent of binds is only for convenient access to things inside the container
for now. We can expand its usage in the future if it is useful.

--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,7 @@ tasks.register("shareWorkspace", Zip) {
 	exclude ".gitignore"
 	exclude ".git"
 	exclude ".gradle"
+	exclude "binds"
 	exclude "shared_workspaces"
 	exclude {
 		it.relativePath.pathString.startsWith("exported_data/") &&
