--- a/compose-recipes/liferay/service.liferay.yaml
+++ b/compose-recipes/liferay/service.liferay.yaml
@@ -20,6 +20,15 @@ services:
             -   "11311:11311"
             -   "8000:8000"
         volumes:
+            -   source: ./binds/liferay/deploy
+                target: /mnt/liferay/deploy
+                type: bind
+            -   source: ./binds/liferay/logs/
+                target: /opt/liferay/logs
+                type: bind
+            -   source: ./binds/liferay/reports/
+                target: /opt/liferay/reports
+                type: bind
             -   source: data-volume
                 target: /opt/liferay/data
                 type: volume
