automatically updates the gradle-local.properties when exporting the data container

--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,12 @@ tasks.register("exportContainerData", DockerCopyFileFromContainer) {
 		mkdir hostPath.get()
 	}
 
+	doLast {
+		updateGradleLocalProperties(["lr.docker.environment.data.directory" : hostPath.get()])
+
+		logger.lifecycle("\nUpdated gradle-local.properties with the new value:\nlr.docker.environment.data.directory=${hostPath.get()}")
+	}
+
 	hostPath = provider {
 		"exported_data/data_${config.namespace}_${timestamp}"
 	}
