--- a/Dockerfile.helper
+++ b/Dockerfile.helper
@@ -4,13 +4,7 @@ ARG DATA_DIRECTORY=data
 
 USER 1000
 
-COPY --chown=1000:1000 ${DATA_DIRECTORY} /data/container-data
+COPY --chown=1000:1000 ${DATA_DIRECTORY} /container-data
+COPY --chown=1000:1000 dumps /dumps
 
-RUN mkdir -p /data/container-data/database
-RUN mkdir -p /data/container-data/elasticsearch
-RUN mkdir -p /data/container-data/liferay
-RUN mkdir -p /data/container-data/webserver
-
-COPY --chown=1000:1000 dumps /data/dumps
-
-RUN mkdir -p /data/dumps
+RUN mkdir -p /dumps
