--- a/compose-recipes/mariadb/service.mariadb.yaml
+++ b/compose-recipes/mariadb/service.mariadb.yaml
@@ -1,4 +1,7 @@
 services:
+    data-helper:
+        volumes:
+            -   mariadb:/container-data/mariadb
     database:
         build: ./compose-recipes/mariadb
         container_name: ${NAMESPACE}-database-mariadb
@@ -18,14 +21,7 @@ services:
                 soft: 20000
             nproc: 65535
         volumes:
-            -   read_only: true
-                source: data-volume
-                target: /docker-entrypoint-initdb.d
-                type: volume
-                volume:
-                    subpath: dumps
-            -   source: data-volume
-                target: /var/lib/mysql
-                type: volume
-                volume:
-                    subpath: container-data/database
+            -   dumps:/docker-entrypoint-initdb.d
+            -   mariadb:/var/lib/mysql
+volumes:
+    mariadb:
