LPD-55579 Add user password reset and other features from spinner that allow backups to be more easily used locally

--- a/buildSrc/src/main/groovy/docker-common.gradle
+++ b/buildSrc/src/main/groovy/docker-common.gradle
@@ -160,7 +160,7 @@ ext {
 		}
 
 		if (defaultCompanyVirtualHost == null) {
-			throw new GradleException("Unable to auto-detect company.default.web.id, please set it in configs/common/portal-ext.properties")
+			throw new GradleException("Unable to auto-detect company.default.web.id from ${companyVirtualHosts}, please set it in configs/common/portal-ext.properties")
 		}
 
 		config.defaultCompanyVirtualHost = defaultCompanyVirtualHost
