--- a/gradle.properties
+++ b/gradle.properties
@@ -73,6 +73,12 @@ lr.docker.environment.database.name=lportal
 # Set to "true" or "1" if you want to enable database partitioning (MySQL or PostgreSQL only)
 lr.docker.environment.database.partitioning.enabled=false
 
+# Required
+#
+# When loading database backups, the tool will reset all user passwords. Specify
+# the user password to use. If not set, it will default to 'test'
+lr.docker.environment.liferay.user.password=test
+
 # Optional
 #
 # Comma-separated list of URLs pointing to hotfixes. These will be automatically
