--- a/configs/common/portal-ext.properties
+++ b/configs/common/portal-ext.properties
@@ -1,2 +1,3 @@
 captcha.enforce.disabled=true
 include-and-override=./properties/fast-login.properties
+include-and-override=./properties/lxc-customer.properties
