--- a/gradle.properties
+++ b/gradle.properties
@@ -93,6 +93,19 @@ lr.docker.environment.hotfix.urls=
 
 # Optional
 #
+# LXC environment name. If the projectId is lxcx1e4-x1e4prd, the environment
+# name is x1e4prd
+#lr.docker.environment.lxc.environment.name=
+
+# Optional
+#
+# When loading SaaS backups, the tool can automatically configure portal
+# properties to match SaaS environment using the liferay-lxc repository. Specify
+# the path where you cloned the repository locally.
+#lr.docker.environment.lxc.repository.path=
+
+# Optional
+#
 # The namespace to use for the docker-compose instance. If not set, defaults to
 # the name of the Gradle root project, which is the current folder's name if not
 # set in settings.gradle. In general, you should not need to change this.
